update main page text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--nav bar -->
         <nav>
             <a href="#" class="logo">
-                <h1 class="singer-name">Amanda Runge<br><span class="singer-title">Mezzo Soprano</span></h1>
+                <h1 class="singer-name">Amanda Runge<br><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></h1>
             </a>
             <ul class="navbar-link">
                 <li><a href="#.html">about</a></li>
@@ -26,10 +26,9 @@
             </ul>
         </nav>
         <section class="singer-bio">
-            <p>A performer who knows how to draw an audience. It has been quoted that I have &#34;a powerful voice&#34; and &#34;a good heart&#34;.</p>
-            <p>I perform regularly, with many Chicago companies including: <span class="company-name">Mainstreet Opera</span>, <a class="company-name">Opera on Tap</a>, <a class="company-name">Grant Park Chorus</a>, <a class="company-name">DaCorneto</a>, <a class="company-name">Verismo Opera</a>, <a class="company-name">Katydid Productions</a>, <a class="company-name">Elgin Opera Company</a>, <a class="company-name">Third Eye Ensemble Theatre</a>, and <a class="company-name">Lingerie Lyrique</a>, a burlesque opera company, where I am also a principal member. Other notable roles have included traveling to Europe to perform an opera production of baroque music with <a class="company-name">Kiez Oper</a> in Berlin, Germany, singing with <a class="company-name">Bakersfield Symphony</a>, singing with <a class="company-name">Banbury Symphony</a>, and to Asia to perform with Chicago’s <a class="company-name">Redmoon Theater Company</a> in Hangzhou, China.</p>
-            <p>My passion is to introduce classical and live music to all audiences by making opera more accessible by engaging with unconventional audiences and operating in unique locations.</p>
-            <p>Contact me for hire or collaboration. Subscribe to my newsletter or follow my calendar to be notified of my upcoming performance.</p>
+            <p>Amanda performs regularly with many Chicago companies, including: <span class="company-name">Mainstreet Opera</span>, <span class="company-name">Opera on Tap</span>, <span class="company-name">Grant Park Chorus</span>, <span class="company-name">DaCorneto</span>, <span class="company-name">Verismo Opera</span>, <span class="company-name">Katydid Productions</span>, <span class="company-name">Elgin Opera Company</span>, <span class="company-name">Third Eye Ensemble Theatre</span>, and <span class="company-name">Lingerie Lyrique</span>, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the <span class="company-name">Aspen Festival Orchestra</span>, <span class="company-name">Bakersfield Symphony</span> and <span class="company-name">Banbury Symphony</span> as well as performing with <span class="company-name">Kiez Oper</span> in Berlin, Germany, and Chicago’s <span class="company-name">Redmoon Theater Company</span> in Hangzhou, China.</p>
+            <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+            <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
         </section>
         <!--Begin MailChimp Signup Form -->
         <section id="mc_embed_signup">
@@ -73,7 +72,7 @@
         <!--Begin MailChimp Signup Form -->
         <!--Calendar-->
         <section class="calendar">
-            <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border: 0" width="600" height="400" frameborder="0" scrolling="no">
+            <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border: 0;" width="600" height="400" frameborder="0" scrolling="no">
             </iframe>
         </section>
         <!--Calendar-->
