--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title>Amanda Runge: Mezzo Soprano</title>
@@ -7,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
         <!--Font: Abril Fatface -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
+        <!--Font: -->
+        <link rel='stylesheet' type="text/css" href='http://fonts.googleapis.com/css?family=Leckerli+One' >
         <!--Framework Library-->
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <!-- MailChimp Signup Form -->
@@ -16,10 +17,12 @@
     </head>
     <body>
         <!--nav bar -->
-        <nav>
+        <div>
             <a href="#" class="logo">
                 <h1 class="singer-name">Amanda Runge<br><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></h1>
             </a>
+        </div>
+        <nav>
             <ul class="navbar-link">
                 <li><a href="#.html">about</a></li>
                 <li><a href="#.html">gallery</a></li>
@@ -35,25 +38,43 @@
             <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                     <h2>Subscribe to Amanda's mailing list</h2>
-                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                    <div class="indicates-required">
+                        <span class="asterisk">*</span> indicates required</div>
                     <div class="mc-field-group">
-                        <label for="mce-EMAIL">Email Address<span class="asterisk">*</span>
-                        </label>
-                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                        <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
+                        <input type="email"
+                               value="" 
+                               name="EMAIL" 
+                               class="required email" 
+                               id="mce-EMAIL">
                     </div>
                     <div class="mc-field-group">
                         <label for="mce-FNAME">First Name </label>
-                        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                        <input type="text" 
+                               value="" 
+                               name="FNAME" 
+                               class=""
+                               id="mce-FNAME">
                     </div>
                     <div class="mc-field-group">
                         <label for="mce-LNAME">Last Name </label>
-                        <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+                        <input type="text"
+                               value="" 
+                               name="LNAME" 
+                               class="" 
+                               id="mce-LNAME">
                     </div>
                     <div class="mc-field-group input-group">
                         <strong>Email Format </strong>
                         <ul>
-                            <li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
-                            <li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
+                            <li>
+                                <input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0">
+                                <label for="mce-EMAILTYPE-0">html</label>
+                            </li>
+                            <li>
+                                <input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1">
+                                <label for="mce-EMAILTYPE-1">text</label>
+                            </li>
                         </ul>
                     </div>
                     <div id="mce-responses" class="clear">
