--- a/app/index.html
+++ b/app/index.html
@@ -16,24 +16,28 @@
         <link rel="stylesheet" type="text/css" href="css/main.css"> 
     </head>
     <body>
-        <div>
-            <div>
+        <div class="l--constrain">
+            <div class="grid grid__5">
                 <div><a href="#" class="logo"></a></div>
                 <h1 class="singer-name">Amanda Runge<br></h1>
                 <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></p>
             </div>
-            <nav
+            <nav class="grid grid__5">
                 <ul class="navbar-link">
                     <li><a href="#">about</a></li>
                     <li><a href="#">gallery</a></li>
                 </ul>
             </nav>
         </div>
-        <section class="singer-bio">
-            <p>Amanda performs regularly with many Chicago companies, including: <span class="company-name">Mainstreet Opera</span>, <span class="company-name">Opera on Tap</span>, <span class="company-name">Grant Park Chorus</span>, <span class="company-name">DaCorneto</span>, <span class="company-name">Verismo Opera</span>, <span class="company-name">Katydid Productions</span>, <span class="company-name">Elgin Opera Company</span>, <span class="company-name">Third Eye Ensemble Theatre</span>, and <span class="company-name">Lingerie Lyrique</span>, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the <span class="company-name">Aspen Festival Orchestra</span>, <span class="company-name">Bakersfield Symphony</span> and <span class="company-name">Banbury Symphony</span> as well as performing with <span class="company-name">Kiez Oper</span> in Berlin, Germany, and Chicago’s <span class="company-name">Redmoon Theater Company</span> in Hangzhou, China.</p>
-            <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
-            <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
-        </section>
+        <div class="l--constrain">
+            <div class="grid grid__5">
+                <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
+            </div>
+            <div class="grid grid__5">
+                <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+                <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
+            </div>
+        </div>
         <!--Begin MailChimp Signup Form -->
         <section id="mc_embed_signup">
             <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
