--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="l--constrain">
-            <div class="grid grid__5">
+            <div class="grid__offset-1 grid__4">
                 <div><a href="#" class="logo"></a></div>
                 <h1 class="singer-name">Amanda Runge<br></h1>
                 <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></p>
@@ -30,16 +30,23 @@
             </nav>
         </div>
         <div class="l--constrain">
-            <div class="grid grid__5">
+            <div class="grid__12">
+                <div class="hero">
+                </div>
+            </div>
+        </div>
+        <div class="l--constrain">
+            <div class="grid__offset-1 grid__4">
                 <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
             </div>
-            <div class="grid grid__5">
+            <div class="grid__offset-1 grid__4">
                 <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
                 <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
             </div>
         </div>
         <!--Begin MailChimp Signup Form -->
-        <section id="mc_embed_signup">
+        <div class="l--constrain">
+            <section class="grid__offset-1" id="mc_embed_signup">
             <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
                     <h2>Subscribe to Amanda's mailing list</h2>
@@ -94,13 +101,16 @@
                     </div>
                 </div>
             </form>
-        </section>
+            </section>
+        </div>
         <!--Begin MailChimp Signup Form -->
         <!--Calendar-->
-        <section class="calendar">
-            <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border: 0;" width="600" height="400" frameborder="0" scrolling="no">
-            </iframe>
-        </section>
+        <div>
+            <section>
+                <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border: 0;" width="600" height="400" frameborder="0" scrolling="no">
+                </iframe>
+            </section>
+        <div>
         <!--Calendar-->
     </body>
     <footer>
