--- a/app/index.html
+++ b/app/index.html
@@ -16,102 +16,114 @@
         <link rel="stylesheet" type="text/css" href="css/main.css"> 
     </head>
     <body>
+        <!--Header-->
         <div class="l--constrain">
-            <div class="grid__offset-1 grid__4">
+            <div class="grid__offset-1 grid__5">
                 <div><a href="#" class="logo"></a></div>
                 <h1 class="singer-name">Amanda Runge<br></h1>
                 <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></p>
             </div>
-            <nav class="grid grid__5">
+            <!--
+            <nav class="grid__offset-7 grid__5">
                 <ul class="navbar-link">
                     <li><a href="#">about</a></li>
                     <li><a href="#">gallery</a></li>
                 </ul>
             </nav>
         </div>
+        <!--Hero -->
         <div class="l--constrain">
             <div class="grid__12">
                 <div class="hero">
                 </div>
             </div>
         </div>
-        <div class="l--constrain">
-            <div class="grid__offset-1 grid__4">
-                <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
-            </div>
-            <div class="grid__offset-1 grid__4">
-                <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
-                <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
-            </div>
-        </div>
-        <!--Begin MailChimp Signup Form -->
-        <div class="l--constrain">
-            <section class="grid__offset-1" id="mc_embed_signup">
-            <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-                    <h2>Subscribe to Amanda's mailing list</h2>
-                    <div class="indicates-required">
-                        <span class="asterisk">*</span> indicates required</div>
-                    <div class="mc-field-group">
-                        <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
-                        <input type="email"
-                               value="" 
-                               name="EMAIL" 
-                               class="required email" 
-                               id="mce-EMAIL">
-                    </div>
-                    <div class="mc-field-group">
-                        <label for="mce-FNAME">First Name </label>
-                        <input type="text" 
-                               value="" 
-                               name="FNAME" 
-                               class=""
-                               id="mce-FNAME">
-                    </div>
-                    <div class="mc-field-group">
-                        <label for="mce-LNAME">Last Name </label>
-                        <input type="text"
-                               value="" 
-                               name="LNAME" 
-                               class="" 
-                               id="mce-LNAME">
-                    </div>
-                    <div class="mc-field-group input-group">
-                        <strong>Email Format </strong>
-                        <ul>
-                            <li>
-                                <input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0">
-                                <label for="mce-EMAILTYPE-0">html</label>
-                            </li>
-                            <li>
-                                <input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1">
-                                <label for="mce-EMAILTYPE-1">text</label>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display:none"></div><div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                        <input type="text" name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" tabindex="-1" value="">
-                    </div>
-                    <div class="clear">
-                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                    </div>
+        <!--Hero-->
+        <div class="wrapper">
+            <div class="l--constrain">
+                <div class="grid__4">
+                    <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
                 </div>
-            </form>
-            </section>
+                <div class="grid__4">
+                    <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+                    <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
+                </div>
+            </div>
+            <!--Begin MailChimp Signup Form -->
+            <div class="l--constrain">
+                <div class="grid__4">
+                    <section class="grid__offset-1" id="mc_embed_signup">
+                    <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <h2>Subscribe to Amanda's mailing list</h2>
+                            <div class="indicates-required">
+                                <span class="asterisk">*</span> <p>indicates required</p>
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
+                                <input type="email"
+                                       value="" 
+                                       name="EMAIL" 
+                                       class="required email" 
+                                       id="mce-EMAIL">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-FNAME">First Name </label>
+                                <input type="text" 
+                                       value="" 
+                                       name="FNAME" 
+                                       class=""
+                                       id="mce-FNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-LNAME">Last Name </label>
+                                <input type="text"
+                                       value="" 
+                                       name="LNAME" 
+                                       class="" 
+                                       id="mce-LNAME">
+                            </div>
+                            <div class="mc-field-group input-group">
+                                <strong>Email Format</strong>
+                                <ul>
+                                    <li>
+                                        <input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0">
+                                        <label for="mce-EMAILTYPE-0">html</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1">
+                                        <label for="mce-EMAILTYPE-1">text</label>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div id="mce-responses" class="clear">
+                              <div class="response" id="mce-error-response" style="display:none"></div><div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                <input type="text" name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" tabindex="-1" value="">
+                            </div>
+                            <div class="clear">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                            </div>
+                        </div>
+                    </form>
+                    </section>
+                </div>
+            </div>
+            <!--Begin MailChimp Signup Form -->
+            <!--Calendar-->
+            <div class="l--constrain">
+                <div class="grid__4">
+                    <section>
+                        <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border: 0;" width="300" height="400" frameborder="0" scrolling="no">
+                        </iframe>
+                    </section>
+                </div>
+            </div>
         </div>
-        <!--Begin MailChimp Signup Form -->
         <!--Calendar-->
-        <div>
-            <section>
-                <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border: 0;" width="600" height="400" frameborder="0" scrolling="no">
-                </iframe>
-            </section>
-        <div>
-        <!--Calendar-->
+        <div class="footer" "></div>
     </body>
     <footer>
         <script src="#"></script>
