--- a/app/index.html
+++ b/app/index.html
@@ -17,20 +17,19 @@
     </head>
     <body>
         <!--Header-->
-        <div class="l--constrain">
-            <div class="grid__offset-1 grid__5">
+        <nav class="l--constrain">
+            <div class="grid grid__5">
                 <div><a href="#" class="logo"></a></div>
-                <h1 class="singer-name">Amanda Runge<br></h1>
+                <h1 class="singer-name">Amanda Runge</h1>
                 <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></p>
             </div>
-
-            <nav class="grid__offset-7 grid__5">
+            <div class="grid grid__offset-4 grid__2">
                 <ul class="navbar-link">
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">gallery</a></li>
+                    <li><a href="#"><p>about</p></a></li>
+                    <li><a href="#"><p>gallery</p></a></li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <!--Hero -->
         <div class="l--constrain">
             <div class="grid__12">
@@ -40,16 +39,21 @@
         </div>
         <div class="wrapper">
             <div class="l--constrain">
-                <div class="grid__4">
-                    <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
-                </div>
-                <div class="grid__4">
-                    <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
-                    <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
+                <div class="band">
+                    <div class="grid grid__6">
+                        <div class="text">
+                            <p>Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
+                        </div>
+                    </div>
+                    <div class="grid grid__5">
+                        <div class="text">
+                            <p>She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+                            <p>Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!--Begin MailChimp Signup Form -->
-
             <div class="l--constrain">
                 <div class="grid__4">
                     <section class="" id="mc_embed_signup">
@@ -58,75 +62,75 @@
                                 <legend>
                                     <h2>Subscribe to Amanda's mailing list</h2>
                                 </legend>
-                                    <div class="indicates-required">
-                                        <span class="asterisk">*</span> <p>indicates required</p>
-                                    </div>
-                                    <ul>
-                                        <li class="mc-field-group">
-                                            <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
-                                            <input type="email"
-                                                   value="" 
-                                                   name="EMAIL" 
-                                                   class="required email" 
-                                                   id="mce-EMAIL">
-                                        </li>
-                                        <li class="mc-field-group">
-                                            <label for="mce-FNAME">First Name </label>
+                                <div class="indicates-required">
+                                    <span class="asterisk">*</span> <p>indicates required</p>
+                                </div>
+                                <ul>
+                                    <li class="mc-field-group">
+                                        <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label>
+                                        <input type="email"
+                                               value="" 
+                                               name="EMAIL" 
+                                               class="required email" 
+                                               id="mce-EMAIL">
+                                    </li>
+                                    <li class="mc-field-group">
+                                        <label for="mce-FNAME">First Name </label>
+                                        <input type="text" 
+                                               value="" 
+                                               name="FNAME" 
+                                               class=""
+                                               id="mce-FNAME">
+                                    </li>
+                                    <li class="mc-field-group">
+                                        <label for="mce-LNAME">Last Name </label>
+                                        <input type="text"
+                                               value="" 
+                                               name="LNAME" 
+                                               class="" 
+                                               id="mce-LNAME">
+                                    </li>
+                                    <li class="mc-field-group input-group">
+                                        <strong>Email Format</strong>
+                                        <ul>
+                                            <li>
+                                                <label for="mce-EMAILTYPE-0">html</label>
+                                                <input type="radio" 
+                                                       value="html" 
+                                                       name="EMAILTYPE" 
+                                                       id="mce-EMAILTYPE-0">
+                                            </li>
+                                            <li>
+                                                <label for="mce-EMAILTYPE-1">text</label>
+                                                <input type="radio" 
+                                                       value="text" 
+                                                       name="EMAILTYPE" 
+                                                       id="mce-EMAILTYPE-1">
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li id="mce-responses" class="clear">
+                                        <div class="response" id="mce-error-response" style="display:none"></div>
+                                        <div class="response" id="mce-success-response" style="display:none"></div>
+                                    </li>
+                                    <li>
+                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
                                             <input type="text" 
-                                                   value="" 
-                                                   name="FNAME" 
-                                                   class=""
-                                                   id="mce-FNAME">
-                                        </li>
-                                        <li class="mc-field-group">
-                                            <label for="mce-LNAME">Last Name </label>
-                                            <input type="text"
-                                                   value="" 
-                                                   name="LNAME" 
-                                                   class="" 
-                                                   id="mce-LNAME">
-                                        </li>
-                                        <li class="mc-field-group input-group">
-                                            <strong>Email Format</strong>
-                                            <ul>
-                                                <li>
-                                                    <label for="mce-EMAILTYPE-0">html</label>
-                                                    <input type="radio" 
-                                                           value="html" 
-                                                           name="EMAILTYPE" 
-                                                           id="mce-EMAILTYPE-0">
-                                                </li>
-                                                <li>
-                                                    <label for="mce-EMAILTYPE-1">text</label>
-                                                    <input type="radio" 
-                                                           value="text" 
-                                                           name="EMAILTYPE" 
-                                                           id="mce-EMAILTYPE-1">
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li id="mce-responses" class="clear">
-                                            <div class="response" id="mce-error-response" style="display:none"></div>
-                                            <div class="response" id="mce-success-response" style="display:none"></div>
-                                        </li>
-                                        <li>
-                                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                            <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                                <input type="text" 
-                                                       name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" 
-                                                       tabindex="-1" 
-                                                       value="">
-                                            </div>
-                                        </li>
-                                        <li class="clear">
-                                            <button type="submit" 
-                                                    value="Subscribe" 
-                                                    name="subscribe" 
-                                                    id="mc-embedded-subscribe" 
-                                                    class="button">Submit
-                                            </button>
-                                        </li>
-                                    </ul>
+                                                   name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" 
+                                                   tabindex="-1" 
+                                                   value="">
+                                        </div>
+                                    </li>
+                                    <li class="clear">
+                                        <button type="submit" 
+                                                value="Subscribe" 
+                                                name="subscribe" 
+                                                id="mc-embedded-subscribe" 
+                                                class="button">Submit
+                                        </button>
+                                    </li>
+                                </ul>
                             </fieldset>
                         </form>
                     </section>
@@ -144,9 +148,12 @@
             </div>
         </div>
         <!--Calendar-->
-        <div class="footer" "></div>
+        
     </body>
     <footer>
+        <div class="footer" ">
+            <p><a>Amanda<a></p>
+        </div>
         <script src="#"></script>
-    </footer>
+    </footer>    
 </html>
