--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
             <div class="grid grid__6">
                 <div><a href="#" class="logo"></a></div>
                 <h1 class="singer-name">Amanda Runge</h1>
-                <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Rotarian</span></p>
+                <p><span class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Ice Cream Lover</span></p>
             </div>
             <nav class="grid grid__6">
                 <ul class="navbar-link">
@@ -39,7 +39,7 @@
         </section>
         <section class="l--constrain">
             <div class="grid grid__offset-1 grid__10">
-                <legend>
+                <legend class="grid grid__6">
                     <h2>About</h2>
                 </legend>
                 <div class="grid grid__6">
@@ -68,7 +68,7 @@
                           novalidate>
                         <fieldset id="mc_embed_signup_scroll">
                             <div class="grid grid__12">
-                                <legend class="grid grid__6">
+                                <legend>
                                     <h2>Mailing List</h2>
                                 </legend>
                                 <div class="indicates-required">
@@ -169,6 +169,14 @@
                         scrolling="no"
                         min-width="320">
                 </iframe>
+            </div>
+        </section>
+        <!--Gallery-->
+        <section class="l--constrain">
+            <div class="grid grid__offset-1 grid__10">
+                <legend class="grid grid__6">
+                    <h2>Gallery</h2>
+                </legend>
             </div>
         </section>
         <div class="l--constrain">
